3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

------------------------------------------------------------------------------
Changes for 1.4.0:

server/disease.c: Change move_disease() somehwat - before, if you were
   not susceptible to a disease, it would never run its course.  Yet you
   would still get stuck with the symptoms.  there was a case on
   metalforge where a character had a symptom with no disease, and
   had immunity, yet was still getting stuck with the symptoms.  Not sure
   if this change will help prevent that in the future or not.
include/player.h: Change item_power in player structure to be 16 bits -
   8 bit values were getting overflowed.
MSW 2002-09-14

INSTALL: Update directions with new automake method.
common/Makefile.am, common/Makefile.in: Fix code for building the libproto.h
   file - it was including loader.l and not loader.c
common/exp.c: Add init_experience() and dump_experience() functions -
   init_experience() loads the experience table from a file.  Add default
   experience table into this file
common/init.c: Add call to init_experience()
common/living.c: Remove experience tables - players can select the one they
   want by changing the exp_table file.  Remove reference to new_levels[] -
   only levels[] is used now for the formentioned reason.
include/config.h: Update notes about SIMPLE_EXP system.
include/libproto.h: rebuilt.
lib/Makefile.am, lib/Makefile.in: Add exp_table to list of files.
lib/exp_table: New file that contains experience information.
server/c_object.c: Modify command_take() to look for objects above the player
   to pick up, then objects below.  This fixes the bug with not being able